fix: memory leaks with smart pointers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,19 @@
     "memory_resource": "cpp",
     "random": "cpp",
     "utility": "cpp",
-    "list": "cpp"
+    "list": "cpp",
+    "__errc": "cpp",
+    "__hash_table": "cpp",
+    "__mutex_base": "cpp",
+    "__node_handle": "cpp",
+    "clocale": "cpp",
+    "cstdarg": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "map": "cpp",
+    "mutex": "cpp",
+    "optional": "cpp",
+    "system_error": "cpp"
   },
   "C_Cpp_Runner.msvcBatchPath": "",
   "C_Cpp_Runner.cCompilerPath": "clang",
